fix(ddl): correctly add primary key with table options
- refactor `AddPrimaryKeyToDDL` to accurately locate the closing parenthesis
  of column definitions, ensuring `PRIMARY KEY` is inserted before any
  table options like `WITH` clauses (fixes #694)
- previously, the primary key could be incorrectly appended inside the
  `WITH` clause, resulting in invalid SQL DDL

test(replication): add test for custom table_ddl with primary key and with clause

- introduce `r.88.table_ddl_with_clause.yaml` to validate the fix for
  GitHub Issue #694 in an end-to-end replication scenario
- verify that the target table is created with the specified primary key
  and table options (e.g., `DATA_COMPRESSION`)
- add comprehensive unit tests for `AddPrimaryKeyToDDL` covering DDLs
  with and without `WITH` clauses, nested parentheses, and different dialects

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1436,3 +1436,15 @@
 #     - '"type":"FeatureCollection"'
 #     - '"geometry":{"type":"Point","coordinates":[9.09425263416477,53.4920035631827]}'
 #     - '"properties":{"id":1,"name":"Point 1"}'
+
+# GitHub Issue #694: table_ddl with user-defined PRIMARY KEY and WITH clause
+- id: 158
+  name: 'Test custom table_ddl with PRIMARY KEY and WITH clause (MSSQL)'
+  run: 'sling run -d -r cmd/sling/tests/replications/r.88.table_ddl_with_clause.yaml'
+  streams: 2
+  rows: 2
+  output_contains:
+    - 'execution succeeded'
+    - 'Primary key columns:'
+    - 'Primary key columns (WITH clause table):'
+    - 'Compression info:'
