--- a/core/dbio/templates/base.yaml
+++ b/core/dbio/templates/base.yaml
@@ -46,6 +46,7 @@ core:
   incremental_select_limit_offset: select {fields} from {table} where ({incremental_where_cond}){where_and} order by {update_key} asc limit {limit} offset {offset}
   incremental_where: '{update_key} {gt} {value}'
   backfill_where: '{update_key} >= {start_value} and {update_key} <= {end_value}'
+  merge_update_insert: 'select error /* merge_update_insert not implemented */' 
 
 analysis:
   # table level
