--- a/core/dbio/templates/trino.yaml
+++ b/core/dbio/templates/trino.yaml
@@ -11,13 +11,13 @@ core:
     update {table} as t1 set {set_fields2}
     from (select * from {temp_table}) as t2
     where {pk_fields_equal}
-  insert: insert into {table} ({cols}) values ({values})
+  insert: insert into {table} ({fields}) values ({values})
   limit: select {fields} from {table} offset {offset} limit {limit}
   limit_sql: |
     select * from (
       {sql}
     ) as t offset {offset} limit {limit}
-  insert_temp: insert into {table} ({cols}) select {cols} from {temp_table}
+  insert_temp: insert into {table} ({fields}) select {cols} from {temp_table}
   insert_ignore: insert into {table} ({fields}) values ({values}) on conflict ({pk_fields}) do nothing
   insert_ignore_temp: insert into {table} ({names}) select {names} from {temp_table} on conflict ({pk_fields}) do nothing
   update_temp: |
