--- a/core/dbio/templates/mysql.yaml
+++ b/core/dbio/templates/mysql.yaml
@@ -14,7 +14,7 @@ core:
     INTO TABLE {table}
     FIELDS TERMINATED BY ','
     OPTIONALLY ENCLOSED BY '"'
-    ESCAPED BY ''
+    ESCAPED BY '\\'
     LINES TERMINATED BY '\n'
     IGNORE 1 LINES
 
