--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1569,3 +1569,37 @@
   output_contains:
     - 'execution succeeded'
     - 'SUCCESS: MySQL LoadDataLocal escape handling test passed'
+
+# Test constraint validation with value IN expressions
+# Bug: Constraints fail to abort replication when invalid data is present
+# The constraint should detect invalid rating value and abort the replication
+- id: 172
+  name: 'Test constraint validation with value IN expression (abort mode)'
+  run: 'sling run -d -r cmd/sling/tests/replications/r.101.constraints_test.yaml'
+  err: true
+  output_contains:
+    - 'constraint failure'
+    - 'SUCCESS: Constraint validation in ABORT mode works correctly'
+
+# Test constraint validation with 21+ failures in abort mode
+# Bug fix: After 20 constraint failures, errors should still cause abortion
+- id: 173
+  name: 'Test constraint validation with 21+ failures (abort mode)'
+  run: 'sling run -d -r cmd/sling/tests/replications/r.102.constraints_21plus_bug.yaml'
+  err: true
+  output_contains:
+    - 'constraint failure'
+    - 'execution failed'
+
+# Test constraint validation with 25+ failures in warn mode
+# Bug fix: After 20 warnings, remaining failures should still be counted and logged
+# In warn mode, invalid data IS allowed through but warnings should continue
+- id: 174
+  name: 'Test constraint validation with 25+ failures (warn mode)'
+  run: 'sling run -d -r cmd/sling/tests/replications/r.103.constraints_warn_21plus_bug.yaml'
+  streams: 1
+  rows: 30
+  output_contains:
+    - 'execution succeeded'
+    - 'logging limit reached'
+    - 'SUCCESS: Constraint validation in WARN mode works correctly'
